# evo_wiki

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  STATUS.md  lightrag-config.example.json  pyproject.toml
agents/: openai.yaml
docs/: architecture.md  development-standard.md  evo_wiki_optimization_technical_report.md  upgrading-to-2.0.md  windows-wsl-development.md
examples/WIKI_demo/: .gitignore  README.md  lightrag-config.example.json  wiki.json
examples/local-platform/: README.md  lightrag-config.example.json  wiki.example.json
experiment/: lr004b_acceptance_summary.json  qg001_ops_acceptance_summary.json
experiment/evo_wiki_test/: environment.md  evo_wiki_test_report.md  init_report.md  lightrag-config.example.json  lightrag_fix_report.md  project.json  wiki.json
references/style-samples/: README.md
scripts/: build_demo_bundle.py  build_release.py  run_demo.py
scripts/demo_bundle/: .env.example  README.md  THIRD_PARTY_NOTICES.md  check.sh  docker-compose.yml  requirements.txt  start.sh  stop.sh
skills/evo-wiki-lightrag/: SKILL.md
skills/evo-wiki-operations/: SKILL.md
skills/evo-wiki-wiki/: SKILL.md
src/evo_wiki/: __init__.py  artifacts.py  cli.py  config.py  corpus.py  docker_export.py  evidence.py  gateway_http.py  generation.py  journal.py  journal_legacy.py  lightrag_lane.py  lightrag_sync.py  ops_acceptance.py  orchestration.py  paths.py  platform_export.py  query_audit.py  query_gateway.py  utils.py  (+4 more)
tests/: test_cli_smoke.py  test_demo_bundle.py  test_evidence.py  test_evidence_subgraph.py  test_fixes.py  test_journal.py  test_lightrag_sync.py  test_notifications.py  test_ops_acceptance.py  test_query_gateway.py  test_release.py  test_sqlite_state.py
(+192 files in other folders)
